--- a/index.html
+++ b/index.html
@@ -5,8 +5,97 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
+   <div id="head">
+       <div class="logo">
+       </div>
+            <div id="main_menu">
+    <ul>
+        <li><a href="#">Каталог
+            <ul>
+                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Сливочное</a></li>
+                <li><a href="#">Щербеты</a></li>
+                <li><a href="#">Фруктовый лед</a></li>
+                <li><a href="#">Мелорин</a></li>
+            </ul>
+        </li>       
+        <li><a href="#">Доставка и оплата</a></li>       
+        <li><a href="#">О Компании</a></li>
+      </ul>
+            </div>
+            <div class="contacts">
+ <p>С 10 до 20, ежедневно<br>
+     8 812 450-25-25</p>
+           </div>
+      </div>
+      <div>
+ <h1>Крем-брюле и пломбир
+     с малиновым джемом</h1>
+          <bottom>Давайте оба!</bottom>
+      </div>
+      <div class="container">
+    <div class="box">
+          <div class="box_left">
+          <h2>Малинка даром!</h2>
+          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+              <bottom>Хочу варенье!</bottom>
+          </div>
+        <div class="box_right">
+        <h2>Шоколадки даром!</h2>
+        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки  совершенно бесплатно.</p>
+         <bottom>Хочу шоколадки!</bottom>
+          </div>
+          </div>
+    <div class="cream">
+          <div class="orange">
+              <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+          </div>
+          <div class="chocolate">
+              <p>Сливочно-кофейное с кусочками шоколада</p>
+          </div>
+          <div class="strawberry">
+              <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+          </div>
+          <div class="caramel">
+             <p>Сливочное крем-брюле с карамельной подливкой<p>
+          </div>
+          </div>
+    <div class="text">
+              <p>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес
+              Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+              <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
 
+              <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+
+              <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+          </div>
+    <div class="box2">
+             <p>Новое в нашем блоге</p>
+             <p><a href="#">10 способов сервировки
+             фруктовых щербетов к столу</a></p>
+                                                     
+             <p>Подпишитесь на нашу сладкую рассылку
+             и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+             <bottom>Отправить</bottom>
+          </div> 
+      </div>
+      <div class="map">
+<p> Адрес главного офиса 
+и офлайн-магазина:
+ул. Большая Конюшенная 19/8, Санкт-Петербург
+ Для заказов по телефону:
+ 8 812 450-25-25
+    (с 10 до 20 ежедневно)</p>
+     <bottom>Форма обратной связи</bottom>
+      </div>
+      <div class="footer">
+          <p>Для поставщиков</p>
+          <p>О производстве</p>
+          <p>Наши документы</p>
+          <p>Экологические стандарты</p>
+          <div class="logo2"></div>
+          <p>Сделано в HTML Academy © 2017</p>
+      </div>  
   </body>
 </html>
